@@ -3,12 +3,19 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.9.RELEASE' apply false
 }
 
-tasks.withType(JavaCompile).each {
-    it.options.compilerArgs += [
+tasks.withType(JavaCompile) {
+    options.compilerArgs += [
             '-Xlint:preview',
             '-Xlint:unchecked',
             '-Xlint:deprecation'
     ]
+}
+
+tasks.withType(ScalaCompile) {
+    scalaCompileOptions.forkOptions.with {
+        memoryMaximumSize = '1g'
+        jvmArgs = ['-XX:MaxPermSize=512m']
+    }
 }
 
 configure([
